--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -212,18 +212,18 @@ OpenMP is a standard Application Programming Interface (API) for shared memory p
 Multi-core ESBMC obtains the problem specification represented by a C program, which is violated when the correct optimum value () parameter is reached; Multi-core ESBMC starts a parallel region with  different instances of ESBMC, based on the number of available processing cores. All these ESBMC instances run independently of each other, as shown in Fig. 2; note that there is no shared-memory (or message-passing) mechanism among the threads. In particular, different threads are managed by the OpenMP API, which is responsible for the thread lifecycle: start, running, and dead states, using different  values as condition. After executing  instances, if there is no code violation, then multi-core ESBMC starts  new instances again. During the parallel region execution, if a violation is found in any running thread, then it presents the counterexample with the violation condition and the verification time. If all threads of the batch processing are terminated, then multi-core ESBMC finishes its execution.
 
 \subsection{\textcolor{Red}{Multi-core ESBMC with OpenMP using Binary Search}}
-The original parallelization was made by continuously forking the instances of the ESBMC until the first violation is find. 
+\textcolor{Red}{The original parallelization was made by continuously forking the instances of the ESBMC until the first violation is find.
 
-Since OpenMP only returns from a parallelized loop when every forked thread finishes, some processor could remain idle for some time.
+Since OpenMP only returns from a parallelized loop when every forked thread finishes, some processor could remain idle for some time.}
 \begin{figure}[ht]
 	\centering
   \includegraphics[scale=0.75]{Image/esbmc-parallel.png} 
 	\caption{gestaucht}
 	\label{fig2}
 \end{figure}
-So the first approach was to remove the Idle time from the parallel loops by creating workers inside the threads to always execute the next step until a violation is find. At first though it seemed to be a great improvement but as ESBMC executes almost the same time the steps, there was almost no optimization. 
+\textcolor{Red}{Consequently, the first approach aims to remove the idle time from the parallel loops, by creating workers inside the threads to execute the next step until a violation is found. This approach could potentially lead to a great improvement, but as ESBMC executes the sequential steps almost at the same time, the processor does not remain idle for a longer period and thus there is almost no optimization
 
-The most optimized approach used was to use a parallelized binary search to reduce the complexity of the tasks. So was made a controller to return the best step to execute in order to reduce the domain as maximum as possible. This is done by dividing the domain in chunks and than returning the middle of the biggest chunk existent, and creating two new chunks.
+The most optimized approach applies a parallelized binary search to reduce the amount of steps executed  in order to find the most optmized solution. As a result, the controller is designed to return the best step to execute so that the number of steps are reduced as maximum as possible. The parallelized binary search accomplishes this by splitting the domain into intervals and then returning the middle of the largest interval, which thus creates two new intervals.}
 \begin{figure}[ht]
 	\centering
   \includegraphics[scale=0.75]{Image/esbmc-parallel-Controler.png} 
@@ -231,7 +231,7 @@ The most optimized approach used was to use a parallelized binary search to redu
 	\label{fig2}
 \end{figure}
 
-To exemplify, given a problem of domain 1 to 20, first we create an initial chunk  1 – 20. When the next available core asks for a step to execute, the controller gets the biggest chunk which in this case is 1 – 20, divide it by 2, creates two new chunks and return the middle of the original chunk. So it would be 2 new chunks 1 – 9 and 11 – 20, and the returned step will be 10. Additional checks are needed to avoid the creation of empty or invalid chunks.
+\textcolor{Red}{As example, given a problem of domain 1 to 20, firstly we create an initial interval from 1 to 20. When the next available core asks for a step to execute, the controller gets the biggest interval, which in this case is 1 – 20, divide it by 2, creates two new intervals and return the middle of the original interval. Therefore, there would be 2 new intervals, one from 1 to 9 and another one from 11 to 20, and the returned step would be 10. The controller also checks when an interval has less than two elements to avoid the creation of empty or invalid intervals. }
 \begin{figure}[ht]
 	\centering
   \includegraphics[width=0.49\textwidth, height=75px]{Image/Fig4.png}
@@ -239,9 +239,9 @@ To exemplify, given a problem of domain 1 to 20, first we create an initial chun
 	\label{fig2}
 \end{figure}
 
-Additionally, since there will be a gap between the steps, produced by the customized binary search algorithm, it is possible that a lot of steps will not be needed to execute. For instance, on the example above, if a step 10 return false, it is obvious that every step after 10 will also be a violation. On the other hand, if the same step was successful, we can assume that every step before 10 will also be a valid. 
+\textcolor{Red}{Additionally, since there is a gap between the steps, produced by the customized binary search; in particular, there might be several steps are not executed. For instance, in the example above, if step 10 returns false, then one can conclude that all steps after 10 is false as well. However, if the same step 10 is true, we can assume that all steps before 10 is true as well. 
 
-That said, was implemented in the controller a method to discard unnecessary steps by removing or shrinking existing chunks. It made a very big impact in the calculation time. However a step can be running and not be needed anymore, in this case the binary algorithm kills the forked  process and starts a new one.
+As a result, a method to remove unnecessary steps is implemented in the controller by removing or shrinking existing intervals. This approach leads to a high impact in the verification time. However, if a step is running and is not needed anymore, the worker kills the forked process and starts a new one.}
 \begin{lstlisting}
 01. GetNextStep(){
 02.  int largestChunk = -1;
@@ -263,8 +263,7 @@ That said, was implemented in the controller a method to discard unnecessary ste
 18.   return median;
 19. }
 \end{lstlisting}
- The execution is made by executing the procedure described pseudocode before and then starting the process of the ESBMC to execute the returned step.
-While the step is being executed the algorithm query the controller to check if this step is still needed. If not, the ESBMC instance is killed and the worker is free to start another step.
+\textcolor{Red}{The algorithm above describes how the customized binary search calculates and returns the step to be executed. From line 4 to 9 the algorithm finds the biggest interval. Then from the line 10 the biggest interval is removed and the median is calculated in the line 11. Then 2 new intervals are created, the left side on line 14 and the right side on the line 16. At the end, the median is returned.}
 
 \begin{lstlisting}
 01. step = controller.GetNextStep();
@@ -274,6 +273,7 @@ While the step is being executed the algorithm query the controller to check if 
 05.    kill(pid);
 06. }     
 \end{lstlisting}
+\textcolor{Red}{The algorithm above describes how the worker starts and monitors the ESBMC instances. The algorithm starts by retrieving the step to execute from the controller (line 1) , starts the instance of ESBMC and get the process id from the forked process (line 2). While the step is being executed, the controller checks whether this step is still needed (line 4). If not, then the ESBMC instance is killed (line 5) and the worker is free to initiate another step.}
 
 \section{Mathematical modeling}
 The mathematical modeling was taken from [1], [2].
@@ -402,14 +402,14 @@ ESBMC 1.24 running on a 64-bit Ubuntu 14.04.1 LTS operating system was used. Ver
 
 \textcolor{Green}{The vertices in the graphs correspond to high-level language instructions. Software and communication costs are time dimensional, and hardware costs represent the occupied area.}  \textbf{Graphs nao deveria ser Tabela? acho que esse texto veio daquele artigo expandido. esse paragrafo faz sentido ao senhor? }
 
-\textcolor{Red}{Os resultados obtidos destacam as ferramentas vZ e ILP.
-Vz resolveu corretamente 4 de 7 algoritmos, teve um falso positivo no algoritmo RC6, seu resultado mais lento comparado a ILP Foi no algoritmo Patricia onde este foi 3.33 vezes mais rápido, vZ retornou dois TO(Time OUT) em Fuzzy e Mars.}  
+\textcolor{Red}{The results obtained that standout were the ILP and vZ.
+Vz solved correctly 4 of 7 algorithms, got an false positive in the algorithm RC6, the slowest result compared with ILP was Patricia that was 3.33 times faster, vZ returned two TO (time outs) in Fuzzy and Mars.}
 
-\textcolor{Red}{Em contrapartida, ILP Resolveu corretamente 6 de 7 algoritmos, não teve falso positivo, o tempo de resolucao do problema é maior quando comparamos com ILP/vZ e menor quando comparado com ILP/ESBMC, isso o coloca como uma ferramenta otima em resolucao e intermediaria no quesito tempo.  }
+\textcolor{Red}{In contrast, ILP solved correctly 6 of 7 algorithms, do not had any false positive, the resolution time is bigger compared with vZ and lower compared with ESBMC, it shows that ILP is optimized to solve problems but has an average resolution time.}
 
-\textcolor{Red}{A unica tecnica capaz de resolver todos os benchmarks foi GA, entretanto, a precisão não foi satisfatoria, a taxa de erro variou entre -37.6\% até 29.0\%.}
+\textcolor{Red}{The only technique aqble to solve all algorithms was GA, however it's precision was not satisfatory, it had error rate between -37.6\% and 29.0\%.}
 
-\textcolor{Red}{Todas as versões do ESBMC paralelo obtiveram melhores resultados do que no modo sequencial, destaca-se a versão binaria descrita na secao 2.5, o desempenho se torna cada vez melhor quando se aumenta o numero de nós e arestas. o algoritmo Clustering quando processado pelo ESBMC paralelo obteve um desempenho 3.13 vezes melhor do que ILP, seu tempo de 207 segundos é muito proximo do tempo de solucao do Vz que é de 109 segundos. }
+\textcolor{Red}{All versions of parallel ESBMC got better results compared with the sequential approach, stands out the binary version described on the section 2.5, the performance get better as the number of nodes and edges get bigger. The clustering algorithm when processed by the parallel ESBMC had 3.13 better performance than ILP, it`s time was 207 seconds and is very cloe to the solution of vZ that is 109 seconds.}
 
 \begin{table}[h]
 \caption {Results of the benchmarks}
@@ -484,7 +484,7 @@ Vz resolveu corretamente 4 de 7 algoritmos, teve um falso positivo no algoritmo 
 \end{tabular}
 \end{table}
 
-\textcolor{Red}{A Tabela 2 mostra avancos na paralelizacao de algoritmos para problemas de particionamento, ESBMC obteve excelentes resultados quando executado de modo paralelo, as ferramentas vZ e ILP ainda se comportam de forma precisa frente ao ESBMC.} 
+\textcolor{Red}{The table 2 shows the advances in the parallelization of algorithms of partitioning problems, ESBMC had great results when executed in parallel, the vZ and ILP had precise results as ESBMC.} 
 
 \section{Related Work}
 Since the second half of the first decade of the 2000s, three main paths have been tracked to improve or to present alternative solutions to the optimization of HW-SW partitioning, i.e., to find the exact solution [2], to use heuristics to speed up performance time [1], and hybrid ones [22].
